feat: update linter config

--- a/FreeCodeCamp/selectgroup.html
+++ b/FreeCodeCamp/selectgroup.html
@@ -7,9 +7,14 @@
         >
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <title>Learning D3</title>
+        <title>Select Group</title>
     </head>
     <body>
-        <script src="/learningd3.js"></script>
+        <ul>
+            <li>Example</li>
+            <li>Example</li>
+            <li>Example</li>
+        </ul>
+        <script src="/selectgroup.js"></script>
     </body>
 </html>
