--- a/FreeCodeCamp/workwithdata.html
+++ b/FreeCodeCamp/workwithdata.html
@@ -7,9 +7,9 @@
         >
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <title>Learning D3</title>
+        <title>Work with data</title>
     </head>
     <body>
-        <script src="/learningd3.js"></script>
+        <script src="/workwithdata.js"></script>
     </body>
 </html>
