feat: add runserver and cdn link for d3js to html docs

--- a/FreeCodeCamp/learningd3.html
+++ b/FreeCodeCamp/learningd3.html
@@ -8,6 +8,7 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>Learning D3</title>
+        <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     </head>
     <body>
         <script src="/learningd3.js"></script>
