--- a/FreeCodeCamp/selectgroup.html
+++ b/FreeCodeCamp/selectgroup.html
@@ -8,6 +8,7 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>Select Group</title>
+        <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     </head>
     <body>
         <ul>
