--- a/FreeCodeCamp/addcircleattributes.html
+++ b/FreeCodeCamp/addcircleattributes.html
@@ -7,10 +7,10 @@
         >
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <title>Change SVG color with D3</title>
+        <title>Add circle attributes</title>
         <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     </head>
     <body>
-        <script src="/changesvgcolor.js"></script>
+        <script src="/addcircleattributes.js"></script>
     </body>
 </html>
