--- a/FreeCodeCamp/addtooltip.html
+++ b/FreeCodeCamp/addtooltip.html
@@ -7,10 +7,11 @@
         >
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <title>Change SVG color with D3</title>
+        <title>Add Tooltip</title>
         <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+        <link href="/addtooltip.css" rel="stylesheet">
     </head>
     <body>
-        <script src="/changesvgcolor.js"></script>
+        <script src="/addtooltip.js"></script>
     </body>
 </html>
