fix: fix eslint violations

--- a/Samples/destructure.html
+++ b/Samples/destructure.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         <div id="container"></div>
-        <script src="/starterblank.js" type="module"></script>
+        <script src="/destructure.js" type="module"></script>
     </body>
 </html>
