feat: add datajoin example

--- a/Samples/datajoin.html
+++ b/Samples/datajoin.html
@@ -24,23 +24,6 @@
         >
             Remove fourth value
         </button>
-        <script>
-      <![CDATA[
-
-          d3.select("#list")
-            .selectAll("li")
-            .data([10, 20, 30, 25, 15])
-            .join("li")
-            .text((d) => d);
-
-          function remove() {
-            d3.selectAll("li")
-              .data([10, 20, 30, 15])
-              .join("li")
-              .text((d) => d);
-            d3.selectAll("button").style("visibility", "hidden");
-          }
-      ]]>
-    </script>
+        <script src="/datajoin.js"></script>
     </body>
 </html>
