feat: update join example

--- a/Samples/joins.html
+++ b/Samples/joins.html
@@ -12,11 +12,14 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.js"></script>
     </head>
     <body>
-        <svg height="140" width="100%">
-            <g class="chart">
-                <circle></circle>
-            </g>
-        </svg>
+        <div>
+            <svg height="140" width="100%">
+                <g class="chart">
+                    <circle></circle>
+                </g>
+            </svg>
+            <button type="button">Update</button>
+        </div>
         <script src="/joinscircles.js"></script>
         <svg height="140" width="100%">
             <g class="bars" transform="translate(70,30)"></g>
