feat: update join example

--- a/Samples/joins.html
+++ b/Samples/joins.html
@@ -18,7 +18,7 @@
                     <circle></circle>
                 </g>
             </svg>
-            <button type="button">Update</button>
+            <button class="circle" type="button">Update</button>
         </div>
         <script src="/joinscircles.js"></script>
         <svg height="140" width="100%">
@@ -26,5 +26,12 @@
             <g class="labels" transform="translate(66,30)"></g>
         </svg>
         <script src="/joinsbarchart.js"></script>
+        <div class="content"></div>
+        <div id="menu">
+            <button onclick="javascript:doInsert()" type="button">
+                Insert element
+            </button>
+        </div>
+        <script src="/joinscontent.js"></script>
     </body>
 </html>
