--- a/Samples/svgshapes.html
+++ b/Samples/svgshapes.html
@@ -22,7 +22,16 @@
                     y2="200"
                 ></line>
             </svg>
+            <svg height="300" width="300">
+                <rect fill="green" height="300" width="300" x="20" y="20"></rect>
+            </svg>
+            <svg height="300" width="300">
+                <circle cx="200" cy="50" fill="green" r="20"></circle>
+            </svg>
+            <svg height="300" width="300">
+                <ellipse cx="200" cy="50" fill="green" rx="100" ry="50"></ellipse>
+            </svg>
         </div>
-        <script src="/svgline.js"></script>
+        <script src="/svgshapes.js"></script>
     </body>
 </html>
